--- a/Chatroom/Client/wwwroot/index.html
+++ b/Chatroom/Client/wwwroot/index.html
@@ -22,4 +22,12 @@
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
+<script>
+    window.chatroom = {
+        setTitle: function (title) {
+            document.title = title;
+        }
+    }
+</script>
+
 </html>
