chatroom css animation 1

--- a/Chatroom/Client/wwwroot/index.html
+++ b/Chatroom/Client/wwwroot/index.html
@@ -26,6 +26,9 @@
     window.chatroom = {
         setTitle: function (title) {
             document.title = title;
+        },
+        scrollIntoView: function (selector) {
+            document.querySelector(selector).scrollIntoView();
         }
     }
 </script>
